# RawImageEditor

./: CMakeLists.txt
resources/: resources.qrc  styles.qss
src/: main.cpp
src/app/: Application.cpp  Application.h  MainWindow.cpp  MainWindow.h
src/core/: RawProcessor.cpp  RawProcessor.h
src/ui/: ImageView.cpp  ImageView.h  LeftPanel.cpp  LeftPanel.h  RightPanel.cpp  RightPanel.h  Toolbar.cpp  Toolbar.h
src/ui/AdjustmentWidgets/: BlackAndWhiteWidget.cpp  BlackAndWhiteWidget.h  BrightnessWidget.cpp  BrightnessWidget.h  ClarityWidget.cpp  ClarityWidget.h  ColorBalanceWidget.cpp  ColorBalanceWidget.h  ColorEditorWidget.cpp  ColorEditorWidget.h  ContrastWidget.cpp  ContrastWidget.h  CurveWidget.cpp  CurveWidget.h  DehazeWidget.cpp  DehazeWidget.h  ExposureWidget.cpp  ExposureWidget.h  HDRWidget.cpp  HDRWidget.h  LevelsWidget.cpp  LevelsWidget.h  SaturationWidget.cpp  SaturationWidget.h  SliderRow.h  VignetteWidget.cpp  VignetteWidget.h  WhiteBalanceWidget.cpp  WhiteBalanceWidget.h
